--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<script>
-  window.addEventListener("load", ()=>{
-    window.location.href = "/view/index.html";
-  });
-</script>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Hemetec</title>
+</head>
+<body>
+  <script>
+    window.addEventListener("load", () => {
+      window.location.href = "/view/index.html";
+    });
+  </script>
+</body>
+</html>
