--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <script>
     window.addEventListener("load", () => {
-      window.location.href = "/view/index.html";
+      window.location.href = "view/index.html";
     });
   </script>
 </body>
