Update redirect URL to use HTTPS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <script>
     window.addEventListener("load", () => {
-      window.location.href = "OEDRA/view/index.html";
+      window.location.href = "https://bllprods.github.io/OEDRA/view/index.html";
     });
   </script>
 </body>
